--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,10 @@
 import * as mat4 from './libs/gl-matrix/mat4.js'
 import * as vec3 from './libs/gl-matrix/vec3.js'
 
-// import * as THREE from '../libs/three.js'
-import XREngine from "../XREngine.js"
+// import * as THREE from './libs/three.js'
+import XREngine from "./XREngine.js"
 
-// import * as WebLayer3D from "../libs/three-web-layer.es5.js"
+// import * as WebLayer3D from "./libs/three-web-layer.es5.js"
 
 let device = null
 let session = null
