--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 <div id="description">
 <h2>Traci</h2>
 <img id="collage" src="collage.png" width=512 style="width:512px"></img>
+<img src="qrcode.png"></img>
 </div>
 <button type=button id=go-button>Go</button>
 <br>
